[gd_scene load_steps=7 format=3 uid="uid://dit6nlima4dcr"]

[ext_resource type="StyleBox" uid="uid://wnsjmhdkog0c" path="res://user_interface/controls/HealthBars/PlayerBarBackground.tres" id="1_jk2rn"]
[ext_resource type="Script" uid="uid://qou3ia2ohllt" path="res://user_interface/controls/HealthBars/PlayerHealthBar.gd" id="2_jk2rn"]
[ext_resource type="StyleBox" uid="uid://cctr4lkx828wf" path="res://user_interface/controls/TransparentStyleBox.tres" id="3_7x30k"]
[ext_resource type="StyleBox" uid="uid://br07x4arv5w01" path="res://user_interface/controls/HealthBars/PlayerBarFillDamage.tres" id="4_jk2rn"]
[ext_resource type="Theme" uid="uid://d2mah8qfufk0b" path="res://user_interface/assets/UIMainTheme.tres" id="5_7x30k"]
[ext_resource type="StyleBox" uid="uid://bwswuf3f0td2m" path="res://user_interface/controls/HealthBars/PlayerBarFillHealth.tres" id="5_h0vb6"]

[node name="PlayerHealthBar" type="Panel"]
custom_minimum_size = Vector2(300, 50)
offset_right = 300.0
offset_bottom = 50.0
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_jk2rn")
script = ExtResource("2_jk2rn")

[node name="DamageBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = ExtResource("3_7x30k")
theme_override_styles/fill = ExtResource("4_jk2rn")
step = 1.0
value = 75.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_7x30k")
theme_override_styles/background = ExtResource("3_7x30k")
theme_override_styles/fill = ExtResource("5_h0vb6")
step = 1.0
value = 50.0
